app/assets/stylesheets/components/_banner.scss
/* FOR MOBILE */
@media(max-width: 700px) {
  .banner {
    background: url('https://images.unsplash.com/photo-1541976844346-f18aeac57b06?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80');
    background-position: center;
    background-size: cover;
    height: 90vh;
  }
}
/* FOR TABLET */
@media(min-width: 701px) {
  .banner {
    background-position: center;
    background-size: cover;
    height: 90vh;
    position: relative;
    overflow: hidden;
  }

  .banner:before {
    content: '';
    position: absolute;
    width: 100vw;
    height: 100vw;
    z-index: -1;
    background: url("https://images.unsplash.com/photo-1541976844346-f18aeac57b06?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
    transform: rotate(90deg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
  }
}

/* FOR DESKTOP */
@media(min-width: 960px) {
  .banner {
    background-position: center;
    background-size: contain;
    height: 90vh;
    position: relative;
    overflow: hidden;
  }

  .banner:before {
    content: '';
    position: absolute;
    width: 100vw;
    height: 100vw;
    z-index: -1;
    background: url("https://images.unsplash.com/photo-1541976844346-f18aeac57b06?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80");
    transform: rotate(90deg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
  }
}

